[package]
name = "gfx-backend-runtime"
description = "A gfx-hal backend that allows you to easily select a backend at runtime."
version = "0.0.1"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/gfx-backend-runtime"
readme = "README.md"
keywords = ["gfx", "gfx-hal"]
edition = "2018"
license = "0BSD"

[dependencies]
gfx-hal = { version = "0.2", default-features = false }
gfx-backend-gl = { version = "0.2", default-features = true }

[target.'cfg(any(windows, all(unix, not(target_os = "ios"))))'.dependencies.gfx-backend-vulkan]
version = "0.2"
default-features = false
[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.2"
[target.'cfg(any(target_os = "macos", all(target_arch = "aarch64", target_os = "ios")))'.dependencies.gfx-backend-metal]
version = "0.2"
default-features = false
[target.'cfg(all(target_arch = "x86_64", target_os = "ios"))'.dependencies.gfx-backend-metal]
version = "0.2"
default-features = false
optional = true

[features]
default = []
# If your host build machine(s) are OS X 10.15 or higher, you can use gfx-backend-metal in the iOS simulator via this feature.
# Travis is on OS X 10.13, so this is almost completely untested.
simulator-metal = ["gfx-backend-metal"]

[badges]
appveyor = { repository = "Lokathor/gfx-backend-runtime" }
travis-ci = { repository = "Lokathor/gfx-backend-runtime" }
